@@ -23,6 +23,7 @@
  */
 package picard.sam;
 
+import htsjdk.samtools.CigarOperator;
 import htsjdk.samtools.SAMFileHeader.SortOrder;
 import htsjdk.samtools.SAMProgramRecord;
 import htsjdk.samtools.SAMRecord;
@@ -71,6 +72,10 @@ import java.util.*;
  *      O=merge_alignments.bam \\
  *      R=reference_sequence.fasta
  * </pre>
+ *
+ * <h3>Note about required arguments</h3>
+ * The aligned reads must be specified using either the ALIGNED_BAM or READ1_ALIGNED_BAM and READ2_ALIGNED_BAM arguments.
+ * Without aligned reads specified in one of those manners, the tool will not run.
  *
  *
  * <h3>Caveats</h3>
@@ -126,6 +131,9 @@ public class MergeBamAlignment extends CommandLineProgram {
             "     O=merge_alignments.bam \\\n" +
             "     R=reference_sequence.fasta\n" +
             "\n" +
+            "<h3>Note about required arguments</h3>\n" +
+            " The aligned reads must be specified using either the ALIGNED_BAM or READ1_ALIGNED_BAM and READ2_ALIGNED_BAM arguments. " +
+            " Without aligned reads specified in one of those manners, the tool will not run." +
             "<h3>Caveats</h3>\n" +
             "This tool has been developing for a while and many arguments have been added to it over the years. " +
             "You may be particularly interested in the following (partial) list:\n" +
@@ -145,7 +153,7 @@ public class MergeBamAlignment extends CommandLineProgram {
     public final PGTagArgumentCollection pgTagArgumentCollection = new PGTagArgumentCollection();
 
     @Argument(shortName = "UNMAPPED",
-            doc = "Original SAM or BAM file of unmapped reads, which must be in queryname order.")
+            doc = "Original SAM or BAM file of unmapped reads, which must be in queryname order.  Reads MUST be unmapped.")
     public File UNMAPPED_BAM;
 
     @Argument(shortName = "ALIGNED",
@@ -256,8 +264,15 @@ public class MergeBamAlignment extends CommandLineProgram {
             "alignment is filtered out for some reason. For all strategies, ties are resolved arbitrarily.")
     public PrimaryAlignmentStrategy PRIMARY_ALIGNMENT_STRATEGY = PrimaryAlignmentStrategy.BestMapq;
 
-    @Argument(doc = "For paired reads, soft clip the 3' end of each read if necessary so that it does not extend past the 5' end of its mate.")
+    @Argument(doc = "For paired reads, clip the 3' end of each read if necessary so that it does not extend past the 5' end of its mate.  " +
+            "Reads are first soft clipped so that the 3' aligned end of each read does not extend past the 5' aligned end of its mate.  " +
+            "If HARD_CLIP_OVERLAPPING_READS is also true, then reads are additionally hard clipped so that the 3' unclipped end of each read " +
+            "does not extend past the 5' unclipped end of its mate.  Hard clipped bases and their qualities are stored in the XB and XQ " +
+            "tags, respectively.")
     public boolean CLIP_OVERLAPPING_READS = true;
+
+    @Argument(doc = "If true, hard clipping will be applied to overlapping reads.  By default, soft clipping is used.")
+    public boolean HARD_CLIP_OVERLAPPING_READS = false;
 
     @Argument(doc = "If false, do not write secondary alignments to output.")
     public boolean INCLUDE_SECONDARY_ALIGNMENTS = true;
@@ -273,9 +288,11 @@ public class MergeBamAlignment extends CommandLineProgram {
     public int MIN_UNCLIPPED_BASES = 32;
 
     @Argument(doc = "List of Sequence Records tags that must be equal (if present) in the reference dictionary and in the aligned file. Mismatching tags will cause an error if in this list, and a warning otherwise.")
-    public List<String> MATCHING_DICTIONARY_TAGS = SAMSequenceDictionary.DEFAULT_DICTIONARY_EQUAL_TAG;
+    public List<String> MATCHING_DICTIONARY_TAGS = new ArrayList<>(SAMSequenceDictionary.DEFAULT_DICTIONARY_EQUAL_TAG);
 
-    @Argument(doc = "How to deal with alignment information in reads that are being unmapped (e.g. due to cross-species contamination.) Currently ignored unless UNMAP_CONTAMINANT_READS = true", optional = true)
+    @Argument(doc = "How to deal with alignment information in reads that are being unmapped (e.g. due to cross-species contamination.) " +
+            "Currently ignored unless UNMAP_CONTAMINANT_READS = true. Note that the DO_NOT_CHANGE strategy will actually reset the cigar and set the mapping quality on unmapped reads since otherwise" +
+            "the result will be an invalid record. To force no change use the DO_NOT_CHANGE_INVALID strategy.", optional = true)
     public AbstractAlignmentMerger.UnmappingReadStrategy UNMAPPED_READ_STRATEGY = AbstractAlignmentMerger.UnmappingReadStrategy.DO_NOT_CHANGE;
 
     @Override
@@ -300,7 +317,7 @@ public class MergeBamAlignment extends CommandLineProgram {
                 "the alignment pair with the largest insert size. If all alignments would be chimeric, it picks the " +
                 "alignments for each end with the best MAPQ. ");
 
-        private final Class<PrimaryAlignmentSelectionStrategy> clazz;
+        private final Class<? extends PrimaryAlignmentSelectionStrategy> clazz;
 
         private final String description;
 
@@ -308,14 +325,14 @@ public class MergeBamAlignment extends CommandLineProgram {
             return description;
         }
 
-        PrimaryAlignmentStrategy(final Class<?> clazz, final String description) {
-            this.clazz = (Class<PrimaryAlignmentSelectionStrategy>) clazz;
+        PrimaryAlignmentStrategy(final Class<? extends PrimaryAlignmentSelectionStrategy> clazz, final String description) {
+            this.clazz = clazz;
             this.description = description;
         }
 
         PrimaryAlignmentSelectionStrategy newInstance() {
             try {
-                return clazz.newInstance();
+                return clazz.getDeclaredConstructor().newInstance();
             } catch (Exception e) {
                 throw new PicardException("Trouble instantiating " + clazz.getName(), e);
             }
@@ -340,20 +357,22 @@ public class MergeBamAlignment extends CommandLineProgram {
         }
 
         final SamAlignmentMerger merger = new SamAlignmentMerger(UNMAPPED_BAM, OUTPUT,
-                REFERENCE_SEQUENCE, prod, CLIP_ADAPTERS, IS_BISULFITE_SEQUENCE,
+                referenceSequence.getReferenceFile(), prod, CLIP_ADAPTERS, IS_BISULFITE_SEQUENCE,
                 ALIGNED_READS_ONLY, ALIGNED_BAM, MAX_INSERTIONS_OR_DELETIONS,
                 ATTRIBUTES_TO_RETAIN, ATTRIBUTES_TO_REMOVE, READ1_TRIM, READ2_TRIM,
                 READ1_ALIGNED_BAM, READ2_ALIGNED_BAM, EXPECTED_ORIENTATIONS, SORT_ORDER,
                 PRIMARY_ALIGNMENT_STRATEGY.newInstance(), ADD_MATE_CIGAR, UNMAP_CONTAMINANT_READS,
                 MIN_UNCLIPPED_BASES, UNMAPPED_READ_STRATEGY, MATCHING_DICTIONARY_TAGS);
+
         merger.setClipOverlappingReads(CLIP_OVERLAPPING_READS);
+        merger.setHardClipOverlappingReads(HARD_CLIP_OVERLAPPING_READS);
         merger.setMaxRecordsInRam(MAX_RECORDS_IN_RAM);
         merger.setKeepAlignerProperPairFlags(ALIGNER_PROPER_PAIR_FLAGS);
         merger.setIncludeSecondaryAlignments(INCLUDE_SECONDARY_ALIGNMENTS);
         merger.setAttributesToReverse(ATTRIBUTES_TO_REVERSE);
         merger.setAttributesToReverseComplement(ATTRIBUTES_TO_REVERSE_COMPLEMENT);
         merger.setAddPGTagToReads(pgTagArgumentCollection.ADD_PG_TAG_TO_READS);
-        merger.mergeAlignment(REFERENCE_SEQUENCE);
+        merger.mergeAlignment(referenceSequence.getReferenceFile());
         merger.close();
 
         return 0;
